docker/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sphinx-doc-svc
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
  selector:
    type: app
    service: sphinx-doc
