docker/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphinx-doc-ingress
spec:
  rules:
    - host: docs.sphinx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sphinx-doc-svc
                port:
                  number: 8000
